// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemInformation renders correctly 1`] = `
<div>
  <div
    class="nxrm-page"
  >
    <div
      class="nxrm-page-header"
    >
      <div
        class="nxrm-page-title"
      >
        <h1
          class="title"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-globe fa-w-16 nx-icon"
            data-icon="globe"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 496 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M336.5 160C322 70.7 287.8 8 248 8s-74 62.7-88.5 152h177zM152 256c0 22.2 1.2 43.5 3.3 64h185.3c2.1-20.5 3.3-41.8 3.3-64s-1.2-43.5-3.3-64H155.3c-2.1 20.5-3.3 41.8-3.3 64zm324.7-96c-28.6-67.9-86.5-120.4-158-141.6 24.4 33.8 41.2 84.7 50 141.6h108zM177.2 18.4C105.8 39.6 47.8 92.1 19.3 160h108c8.7-56.9 25.5-107.8 49.9-141.6zM487.4 192H372.7c2.1 21 3.3 42.5 3.3 64s-1.2 43-3.3 64h114.6c5.5-20.5 8.6-41.8 8.6-64s-3.1-43.5-8.5-64zM120 256c0-21.5 1.2-43 3.3-64H8.6C3.2 212.5 0 233.8 0 256s3.2 43.5 8.6 64h114.6c-2-21-3.2-42.5-3.2-64zm39.5 96c14.5 89.3 48.7 152 88.5 152s74-62.7 88.5-152h-177zm159.3 141.6c71.4-21.2 129.4-73.7 158-141.6h-108c-8.8 56.9-25.6 107.8-50 141.6zM19.3 352c28.6 67.9 86.5 120.4 158 141.6-24.4-33.8-41.2-84.7-50-141.6h-108z"
              fill="currentColor"
            />
          </svg>
          <span
            class="nx-feature-name"
          >
            System Information
          </span>
        </h1>
      </div>
      <div
        class="nxrm-page-actions"
      >
        <button
          class="nx-btn nx-btn--primary"
          disabled=""
          type="input"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-download fa-w-16 nx-icon"
            data-icon="download"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
              fill="currentColor"
            />
          </svg>
          <span>
            Download as JSON
          </span>
        </button>
      </div>
    </div>
    <div
      class="nxrm-content-body nxrm-system-information"
    >
      <div
        class="nx-loading-spinner"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-notch fa-w-16 fa-spin nx-loading-spinner__icon nx-icon"
          data-icon="circle-notch"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M288 39.056v16.659c0 10.804 7.281 20.159 17.686 23.066C383.204 100.434 440 171.518 440 256c0 101.689-82.295 184-184 184-101.689 0-184-82.295-184-184 0-84.47 56.786-155.564 134.312-177.219C216.719 75.874 224 66.517 224 55.712V39.064c0-15.709-14.834-27.153-30.046-23.234C86.603 43.482 7.394 141.206 8.003 257.332c.72 137.052 111.477 246.956 248.531 246.667C393.255 503.711 504 392.788 504 256c0-115.633-79.14-212.779-186.211-240.236C302.678 11.889 288 23.456 288 39.056z"
            fill="currentColor"
          />
        </svg>
        <span>
          Loading…
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SystemInformation renders correctly 2`] = `
<div>
  <div
    class="nxrm-page"
  >
    <div
      class="nxrm-page-header"
    >
      <div
        class="nxrm-page-title"
      >
        <h1
          class="title"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-globe fa-w-16 nx-icon"
            data-icon="globe"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 496 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M336.5 160C322 70.7 287.8 8 248 8s-74 62.7-88.5 152h177zM152 256c0 22.2 1.2 43.5 3.3 64h185.3c2.1-20.5 3.3-41.8 3.3-64s-1.2-43.5-3.3-64H155.3c-2.1 20.5-3.3 41.8-3.3 64zm324.7-96c-28.6-67.9-86.5-120.4-158-141.6 24.4 33.8 41.2 84.7 50 141.6h108zM177.2 18.4C105.8 39.6 47.8 92.1 19.3 160h108c8.7-56.9 25.5-107.8 49.9-141.6zM487.4 192H372.7c2.1 21 3.3 42.5 3.3 64s-1.2 43-3.3 64h114.6c5.5-20.5 8.6-41.8 8.6-64s-3.1-43.5-8.5-64zM120 256c0-21.5 1.2-43 3.3-64H8.6C3.2 212.5 0 233.8 0 256s3.2 43.5 8.6 64h114.6c-2-21-3.2-42.5-3.2-64zm39.5 96c14.5 89.3 48.7 152 88.5 152s74-62.7 88.5-152h-177zm159.3 141.6c71.4-21.2 129.4-73.7 158-141.6h-108c-8.8 56.9-25.6 107.8-50 141.6zM19.3 352c28.6 67.9 86.5 120.4 158 141.6-24.4-33.8-41.2-84.7-50-141.6h-108z"
              fill="currentColor"
            />
          </svg>
          <span
            class="nx-feature-name"
          >
            System Information
          </span>
        </h1>
      </div>
      <div
        class="nxrm-page-actions"
      >
        <button
          class="nx-btn nx-btn--primary"
          type="input"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-download fa-w-16 nx-icon"
            data-icon="download"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
              fill="currentColor"
            />
          </svg>
          <span>
            Download as JSON
          </span>
        </button>
      </div>
    </div>
    <div
      class="nxrm-content-body nxrm-system-information"
    >
      <div
        class="nxrm-section nx-tile"
      >
        <h2>
          nexus-status
        </h2>
        <table
          class="nxrm-information"
        >
          <tbody>
            <tr
              class="nxrm-information--row"
            >
              <td
                class="nxrm-information--name"
              >
                status
              </td>
              <td
                class="nxrm-information--value"
              >
                value
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="nxrm-section nx-tile"
      >
        <h2>
          nexus-node
        </h2>
        <table
          class="nxrm-information"
        >
          <tbody>
            <tr
              class="nxrm-information--row"
            >
              <td
                class="nxrm-information--name"
              >
                node
              </td>
              <td
                class="nxrm-information--value"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="nxrm-section nx-tile"
      >
        <h2>
          nexus-configuration
        </h2>
        <table
          class="nxrm-information"
        >
          <tbody>
            <tr
              class="nxrm-information--row"
            >
              <td
                class="nxrm-information--name"
              >
                enabled
              </td>
              <td
                class="nxrm-information--value"
              >
                true
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="nxrm-section nx-tile"
      >
        <h2>
          nexus-properties
        </h2>
        <table
          class="nxrm-information"
        >
          <tbody>
            <tr
              class="nxrm-information--row"
            >
              <td
                class="nxrm-information--name"
              >
                property
              </td>
              <td
                class="nxrm-information--value"
              >
                false
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="nxrm-section nx-tile"
      >
        <h2>
          nexus-license
        </h2>
        <table
          class="nxrm-information"
        >
          <tbody>
            <tr
              class="nxrm-information--row"
            >
              <td
                class="nxrm-information--name"
              >
                fingerprint
              </td>
              <td
                class="nxrm-information--value"
              >
                hash
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="nxrm-section nx-tile"
      >
        <h2>
          nexus-bundles
        </h2>
        <div>
          <h3>
            0
          </h3>
          <table
            class="nxrm-information"
          >
            <tbody>
              <tr
                class="nxrm-information--row"
              >
                <td
                  class="nxrm-information--name"
                >
                  bundleId
                </td>
                <td
                  class="nxrm-information--value"
                >
                  0
                </td>
              </tr>
              <tr
                class="nxrm-information--row"
              >
                <td
                  class="nxrm-information--name"
                >
                  enabled
                </td>
                <td
                  class="nxrm-information--value"
                >
                  true
                </td>
              </tr>
              <tr
                class="nxrm-information--row"
              >
                <td
                  class="nxrm-information--name"
                >
                  config
                </td>
                <td
                  class="nxrm-information--value"
                >
                  value
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="nxrm-section nx-tile"
      >
        <h2>
          system-time
        </h2>
        <table
          class="nxrm-information"
        >
          <tbody>
            <tr
              class="nxrm-information--row"
            >
              <td
                class="nxrm-information--name"
              >
                time
              </td>
              <td
                class="nxrm-information--value"
              >
                value
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="nxrm-section nx-tile"
      >
        <h2>
          system-properties
        </h2>
        <table
          class="nxrm-information"
        >
          <tbody>
            <tr
              class="nxrm-information--row"
            >
              <td
                class="nxrm-information--name"
              >
                property
              </td>
              <td
                class="nxrm-information--value"
              >
                value
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="nxrm-section nx-tile"
      >
        <h2>
          system-environment
        </h2>
        <table
          class="nxrm-information"
        >
          <tbody>
            <tr
              class="nxrm-information--row"
            >
              <td
                class="nxrm-information--name"
              >
                property
              </td>
              <td
                class="nxrm-information--value"
              >
                value
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="nxrm-section nx-tile"
      >
        <h2>
          system-runtime
        </h2>
        <table
          class="nxrm-information"
        >
          <tbody>
            <tr
              class="nxrm-information--row"
            >
              <td
                class="nxrm-information--name"
              >
                property
              </td>
              <td
                class="nxrm-information--value"
              >
                value
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="nxrm-section nx-tile"
      >
        <h2>
          system-network
        </h2>
        <div>
          <h3>
            en0
          </h3>
          <table
            class="nxrm-information"
          >
            <tbody>
              <tr
                class="nxrm-information--row"
              >
                <td
                  class="nxrm-information--name"
                >
                  enabled
                </td>
                <td
                  class="nxrm-information--value"
                >
                  true
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="nxrm-section nx-tile"
      >
        <h2>
          system-filestores
        </h2>
        <div>
          <h3>
            /dev/null
          </h3>
          <table
            class="nxrm-information"
          >
            <tbody>
              <tr
                class="nxrm-information--row"
              >
                <td
                  class="nxrm-information--name"
                >
                  path
                </td>
                <td
                  class="nxrm-information--value"
                >
                  /dev/null
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
